openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhoai-ai-feature-sizing
  #namespace: rhoai-ai-feature-sizing
  labels:
    app: rhoai-ai-feature-sizing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rhoai-ai-feature-sizing
  template:
    metadata:
      labels:
        app: rhoai-ai-feature-sizing
    spec:
      containers:
      - name: rhoai-app
        image: quay.io/sallyom/rhoai-feature:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4501
          name: control-plane
        - containerPort: 3000
          name: ui
        volumeMounts:
        - name: cache
          mountPath: /.cache
        - name: uploads-storage
          mountPath: /app/uploads
        - name: output-storage
          mountPath: /app/output
        resources:
          requests:
            memory: "4Gi"
            cpu: "4000m"
          limits:
            memory: "12Gi"
            cpu: "8000m"
      volumes:
      - name: uploads-storage
        persistentVolumeClaim:
          claimName: rhoai-uploads-pvc
      - name: output-storage
        persistentVolumeClaim:
          claimName: rhoai-output-pvc
      - name: cache
        emptyDir: {}
